# thesis-aki-prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tmp_main_finalists.tex
configs/: cohort.yaml  data.yaml  eval.yaml  features.yaml  models.yaml  project.yaml
scripts/: run_single.py
scripts/slurm/: 00_setup_env.slurm  01_preprocess.slurm  02_scorecard_array.slurm  02_tune_array.slurm  03_evaluate.slurm  README.md  komondor.env  smoke_test.slurm
sql/cohort/: 01_cohort.sql  02_landmarks.sql
sql/concepts/: 01_weight.sql  02_creatinine.sql  03_creatinine_baseline.sql  04_urine_output_hourly.sql  05_kdigo_creatinine.sql  06_kdigo_uo.sql  07_kdigo_stages.sql  08_aki_onset.sql
sql/features/: 01_numeric_events_long.sql  02_rolling_aggregations.sql  03_treatments.sql
sql/labels/: 01_labels.sql
sql/qa/: 01_qa_checks.sql
sql/staging/: 01_schemas.sql  02_stage_hosp.sql  03_stage_icu.sql
src/aki/: __init__.py
src/aki/cli/: __init__.py  main.py
src/aki/cohort/: __init__.py  build.py
src/aki/data/: __init__.py  db.py  inspect.py  manifest.py
src/aki/eval/: __init__.py  aggregate.py  bootstrap.py  calibration.py  decision_curve.py  drift.py  evaluate.py  fairness.py  metrics.py
src/aki/explain/: __init__.py  global_importance.py  patient.py  plots.py  report.py  scorecard_card.py  shap_explainer.py
src/aki/features/: __init__.py  engineer.py  minimal.py  signal_map.py
src/aki/labels/: __init__.py  kdigo.py
src/aki/models/: __init__.py  base.py  ebm.py  lightgbm_model.py  scorecard.py  train.py  tune.py
src/aki/qa/: __init__.py  checks.py
src/aki/split/: __init__.py  splits.py
src/aki/utils/: __init__.py  config.py  logging.py  mlflow_utils.py  paths.py  seed.py  subset.py
tests/: test_cli_smoke.py  test_config.py  test_drift.py  test_eval_metrics.py  test_feature_families.py  test_features.py  test_label_col_parsing.py  test_models_smoke.py  test_qa_checks.py  test_report_subset.py  test_scorecard_artifact.py  test_splits.py  test_sql_runner.py  test_subset_utils.py  test_tune.py
